// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terminal Component should render a terminal component 1`] = `
<div
  className="terminal-base"
  style={Object {}}
>
  <div
    className="terminal-container-wrapper"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <div
      className="terminal-top-bar adjust-bar"
      style={
        Object {
          "backgroundColor": "black",
        }
      }
    >
      <svg
        height="20"
        width="100"
      >
        <circle
          cx="24"
          cy="14"
          fill="red"
          onClick={[Function]}
          r="5"
        />
        <circle
          cx="44"
          cy="14"
          fill="orange"
          onClick={[Function]}
          r="5"
        />
        <circle
          cx="64"
          cy="14"
          fill="green"
          onClick={[Function]}
          r="5"
        />
      </svg>
    </div>
    <div
      className="terminal-container terminal-container-main"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "yellow",
        }
      }
    >
      <div
        className="terminal-holder"
      >
        <div
          className="terminal-content"
        >
          <div
            className="terminal-input-area"
          >
            <pre
              className="terminal-output-line"
            >
              Hello World. My name is Nitin Tulswani
            </pre>
            <div
              className="terminal-input"
            >
              <span
                className="terminal-prompt"
                style={
                  Object {
                    "color": "green",
                  }
                }
              >
                &gt;
              </span>
              <input
                className="terminal-main-input"
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "yellow",
                    "color": "green",
                  }
                }
                tabIndex="-1"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Terminal Component should work with plugins 1`] = `
<div
  className="terminal-base"
  style={Object {}}
>
  <div
    className="terminal-container-wrapper"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <div
      className="terminal-top-bar adjust-bar"
      style={
        Object {
          "backgroundColor": "black",
        }
      }
    >
      <svg
        height="20"
        width="100"
      >
        <circle
          cx="24"
          cy="14"
          fill="red"
          onClick={[Function]}
          r="5"
        />
        <circle
          cx="44"
          cy="14"
          fill="orange"
          onClick={[Function]}
          r="5"
        />
        <circle
          cx="64"
          cy="14"
          fill="green"
          onClick={[Function]}
          r="5"
        />
      </svg>
    </div>
    <div
      className="terminal-container terminal-container-main"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "black",
        }
      }
    >
      <div
        className="terminal-holder"
      >
        <div
          className="terminal-content"
        >
          <div
            className="terminal-input-area"
          >
            <div
              className="terminal-output-line"
            >
               
            </div>
            <div
              className="terminal-input"
            >
              <span
                className="terminal-prompt"
                style={
                  Object {
                    "color": "green",
                  }
                }
              >
                /home/user/ &gt;
              </span>
              <input
                className="terminal-main-input"
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "black",
                    "color": "green",
                  }
                }
                tabIndex="-1"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
